[package]
name = "rust-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
sha1 = "0.11.0-pre.4"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
bytes = "1"
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
