[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
sha1 = "0.11.0-pre.4"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
uuid = { version = "1.12.0", features = ["v4", "serde"] }
clap = { version = "4.5.26", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
tempfile = "3.15.0"
